--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,24 @@
 version: "3.7"
 
 services:
-  postgres:
+  app:
+    build: .
+    restart: on-failure
+    ports:
+      - "8000:8000"
+    env_file:
+      - .env
+    depends_on:
+      - db
+
+  db:
     image: postgres:12.5
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: hhscraper_db
+    env_file:
+      - .env
     volumes:
       - postgresql_data:/var/lib/postgresql/data/
     expose:
       - 5432
-    ports:
-      - 5432:5432
 
 volumes:
   postgresql_data:
