--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
-    "build":{
-        "src": "app/main.py",
-        "use": "@vercel/python"
-    },
+    "builds": [
+      {"src": "app/main.py", "use": "@vercel/python"}
+    ],
     "routes": [
-        {
-        "src": "/(.*)",
-        "dest": "app/main.py"
-    }
+      {"src": "/(.*)", "dest": "app/main.py"}
     ]
 }
